# Ark-server-manager-2.0

./: .gitignore  ARCHITECTURE.md  README.md  RELEASE_NOTES_v2.0.0.md  USER_GUIDE.md  check_icon.js  convert_icon.ps1  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml
src/: App.tsx
src-tauri/: Cargo.toml  output.txt  output_2.txt  output_3.txt  output_app_update.txt  output_app_update_2.txt  output_app_update_3.txt  output_app_update_4.txt  output_app_update_5.txt  output_pid.txt  output_pid_2.txt  output_pid_3.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  models.rs
src-tauri/src/commands/: app_updater.rs  backup.rs  cluster.rs  config.rs  dependencies.rs  discord.rs  files.rs  map.rs  mod.rs  mods.rs  network.rs  rcon.rs  scheduler.rs  security.rs  server.rs  system.rs  tribe.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/services/: app_updater.rs  discord_bot.rs  file_manager.rs  mod.rs  mod_compatibility.rs  mod_scraper.rs  notifications.rs  process_manager.rs  rcon_client.rs  scheduler.rs  server_monitor.rs  steamcmd.rs  updater.rs
src/components/: DependencyStatus.tsx  OnboardingDialog.tsx  Skeleton.tsx
src/data/: configMappings.ts
src/pages/: AIRecommendations.tsx  Automation.tsx  Backups.tsx  ClusterManager.tsx  ConfigEditor.tsx  Dashboard.tsx  DinoManager.tsx  FileManager.tsx  LogsConsole.tsx  MapManager.tsx  ModManager.tsx  (+7 more)
wiki/: DISCORD_BOT_GUIDE.md  FAQ.md  Getting-Started.md  HOW_TO_UPLOAD.md  Home.md  Installation-Guide.md  Troubleshooting.md
(+15 files in other folders)
