[package]
name = "ark-server-manager"
version = "2.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ark_server_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ini = "1.3"
sysinfo = "0.32"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
zip = "2.1"
scraper = "0.19"
bytes = "1"
rcon = "0.5"
cron = "0.12"
local-ip-address = "0.6"
walkdir = "2"
semver = "1.0.27"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

